--- a/homework/package.json
+++ b/homework/package.json
@@ -1,5 +1,6 @@
 {
   "name": "homework",
+  "homepage": "https://elsugar.github.io/lab5/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
